Add base borderless window with precompiled natives